update mail compose box

--- a/src/features/files/ComposeBox.css
+++ b/src/features/files/ComposeBox.css
@@ -134,3 +134,8 @@
     padding-left: 0;
     padding-right: 0;
 }
+
+/*.custom-menu-dropdown {*/
+/*    width: 200px !important;*/
+/*    min-width: 200px !important;*/
+/*}*/
