--- a/src/features/files/ComposeBox.css
+++ b/src/features/files/ComposeBox.css
@@ -135,7 +135,6 @@
     padding-right: 0;
 }
 
-/*.custom-menu-dropdown {*/
-/*    width: 200px !important;*/
-/*    min-width: 200px !important;*/
-/*}*/
+.field .hr {
+    padding-left: 0 !important;
+}
