update select mail list + custom mail subject

--- a/src/features/files/ComposeBox.css
+++ b/src/features/files/ComposeBox.css
@@ -103,6 +103,9 @@
     align-items: center !important;
     justify-content: center !important;
     width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .file-attachment-list-item--meta-avatar {
